--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,30 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - run: mix release --env=prod
+      - run: sudo apt-get update
+      # - run: sudo apt-get install -y python-pip
+      # - run: sudo pip install gigalixir --ignore-installed six
       - run: mix local.hex --force
-      # specify any bash command here prefixed with `run: `
       - run: mix deps.get
+      - run: mix phx.digest
+      - run:
+          name: Set app name # See https://circleci.com/docs/2.0/env-vars/#setting-an-environment-variable-in-a-shell-command
+          command: |
+            echo 'export SUFFIX=$(echo $CIRCLE_BRANCH | tr "[:upper:]" "[:lower:]" | tr -cd "[a-z0-9-]")' >> $BASH_ENV
+            echo 'export APP_NAME="$GIGALIXIR_APP_NAME"' >> $BASH_ENV
+            source $BASH_ENV
+      # - run: gigalixir config:set DATABASE_URL="ecto://DB_USER:$DB_PASSWORD@$DB_EXTERNAL_IP:5432/$DB_NAME"
+
+      - run: git remote add gigalixir https://$GIGALIXIR_EMAIL:$GIGALIXIR_API_KEY@git.gigalixir.com/$GIGALIXIR_APP_NAME.git
+      - run: git push -f gigalixir HEAD:refs/heads/master
+
+
+workflows:
+  version: 2
+  deploy:
+    jobs:
+      - deploy:
+          filters:
+            branches:
+              only: master
